[package]
name = "compressed_sigma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
ark-ff = { version = "0.4.1", default-features = false }
ark-ec = { version = "0.4.1", default-features = false }
ark-std = { version = "0.4.0", default-features = false}
ark-bls12-381 = "0.5.0"
ark-serialize = { version = "0.4.1", default-features = false}
digest = { version = "0.10", default-features = false}
merlin = { version = "3.0"}
sha3 = { version = "0.9"}



